--- a/src/app/result/result.page.scss
+++ b/src/app/result/result.page.scss
@@ -2,16 +2,14 @@
 
 ion-content {
     --background: #f4f4f4;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+ 
+    text-align: center;
   }
   
   .result-card {
-    width: 80%;
-    max-width: 500px;
-    margin: 20px;
+    width: 98%;
+   
+    margin-top: 20px ;
     padding: 20px;
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -41,4 +39,8 @@ ion-content {
   .unanswered {
     color: #ff9800; /* orange */
   }
+  ion-card-content{
+    width: 100%;
+  }
+ 
   
