--- a/src/app/test/test.page.html
+++ b/src/app/test/test.page.html
@@ -3,10 +3,12 @@
     <ion-title>
       Learner's License Test
     </ion-title>
+    <ion-text  slot="end" class="time-remaining">Time Remaining: {{ formatTime(timeRemaining) }}</ion-text>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <div id="main-container">
   <div class="question-card" *ngIf="questions.length > 0">
     <ion-card>
       <ion-card-header>
@@ -26,13 +28,23 @@
     </ion-card>
   </div>
 
-  <ion-button (click)="prevQuestion()" [disabled]="currentQuestionIndex === 0">
-    Previous
-  </ion-button>
-  <ion-button (click)="nextQuestion()" [disabled]="currentQuestionIndex === questions.length - 1">
-    Next
-  </ion-button>
-  <ion-button (click)="submitTest()">Submit</ion-button>
+<ion-grid>
+  <ion-row>
+    <ion-col size="4">
+      <ion-button (click)="prevQuestion()" [disabled]="currentQuestionIndex === 0">
+        Previous
+      </ion-button>
+    </ion-col>
+    <ion-col size="4">
+      <ion-button (click)="nextQuestion()" [disabled]="currentQuestionIndex === questions.length - 1">
+        Next
+      </ion-button>
+    </ion-col>
+    <ion-col size="4">
+      <ion-button (click)="submitTest()">Submit</ion-button>
+    </ion-col>
+  </ion-row>
+</ion-grid>
+  </div>
 
-  <div class="time-remaining">Time Remaining: {{ formatTime(timeRemaining) }}</div>
 </ion-content>
