--- a/src/app/test/test.page.scss
+++ b/src/app/test/test.page.scss
@@ -66,7 +66,8 @@ ion-button:hover {
 }
 
 ion-grid {
-  position: absolute;
+  position: fixed;
+  margin-top: 200px;
   width: 100%;
   bottom: 50px;
   margin-left: 2%;
