--- a/src/app/test/test.page.scss
+++ b/src/app/test/test.page.scss
@@ -66,8 +66,8 @@ ion-button:hover {
 }
 
 ion-grid {
-  position: fixed;
-  margin-top: 200px;
+  //position: fixed;
+  margin-top: 100px;
   width: 100%;
   bottom: 50px;
   margin-left: 2%;
