--- a/src/app/test/test.page.scss
+++ b/src/app/test/test.page.scss
@@ -31,10 +31,11 @@ ion-card-content {
 
 ion-img {
   width: 100%;
-  max-height: 200px;
+  max-height: 900px;
   object-fit: cover;
   border-radius: 10px;
   margin-bottom: 10px;
+  object-fit:cover;
 }
 
 ion-list {
