wellcome page  ,home page , redirect from result page to home page

--- a/src/app/result/result.page.html
+++ b/src/app/result/result.page.html
@@ -5,6 +5,7 @@
     <ion-title>
       Test Result
     </ion-title>
+    <ion-icon name="home" slot="end" routerLink="/home"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
