--- a/src/app/test/test.page.html
+++ b/src/app/test/test.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Learner's License Test
+      Learner's License Test 1
     </ion-title>
     <ion-text  slot="end" class="time-remaining">Time Remaining: {{ formatTime(timeRemaining) }}</ion-text>
   </ion-toolbar>
