--- a/src/app/test3/test3.page.html
+++ b/src/app/test3/test3.page.html
@@ -1,13 +1,51 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>test3</ion-title>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-title>
+      Learner's License Test 3
+    </ion-title>
+    <ion-text  slot="end" class="time-remaining">Time Remaining: {{ formatTime(timeRemaining) }}</ion-text>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">test3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <div id="main-container">
+  <div class="question-card" *ngIf="questions.length > 0">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>{{ questions[currentQuestionIndex].text }}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-text>Question :{{this.currentQuestionIndex}}</ion-text>
+        <ion-img *ngIf="questions[currentQuestionIndex].image" [src]="questions[currentQuestionIndex].image"></ion-img>
+        <ion-list>
+          <ion-radio-group (ionChange)="selectAnswer($event)">
+            <ion-item *ngFor="let option of questions[currentQuestionIndex].options">
+              <ion-label class="custom-label">{{ option }}</ion-label>
+              <ion-radio slot="start" [value]="option"></ion-radio>
+            </ion-item>
+          </ion-radio-group>
+        </ion-list>
+      </ion-card-content>
+    </ion-card>
+  </div>
+
+<ion-grid>
+  <ion-row>
+    <ion-col size="4">
+      <ion-button (click)="prevQuestion()" [disabled]="currentQuestionIndex === 0">
+        Previous
+      </ion-button>
+    </ion-col>
+    <ion-col size="4">
+      <ion-button (click)="nextQuestion()" [disabled]="currentQuestionIndex === questions.length - 1">
+        Next
+      </ion-button>
+    </ion-col>
+    <ion-col size="4">
+      <ion-button (click)="submitTest()">Submit</ion-button>
+    </ion-col>
+  </ion-row>
+</ion-grid>
+  </div>
+
 </ion-content>
