--- a/src/app/wellcome/wellcome.page.html
+++ b/src/app/wellcome/wellcome.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content class="ion-text-center">
-  <img src="assets\Linda’s.png" alt="Linda's Driving School Logo">
+  <img src="assets\Linda.png" alt="Linda's Driving School Logo">
   <h2>Welcome to Linda's Driving School</h2>
   <p>
     We'll help you get on the road safely and confidently. Our professional instructors will guide you through every step of the way.
