--- a/src/app/result/result.page.html
+++ b/src/app/result/result.page.html
@@ -2,55 +2,71 @@
 
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Test Result
-    </ion-title>
+    <ion-title> Test Result </ion-title>
     <ion-icon name="home" slot="end" routerLink="/home"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div id="pdfContent">
-  <ion-card class="result-card">
-    <ion-card-content>
-      <p>time :{{time}}</p>
-      <div class="score" *ngIf="score !== undefined">Your Score: {{ score.toFixed(2) }}%</div>
+    <!-- Time and Score Section -->
+    <div *ngIf="showTimeAndScore">
+      <p>time: {{ time }}</p>
+      <div class="score" *ngIf="score !== undefined">
+        Your Score: {{ score.toFixed(2) }}%
+      </div>
+    </div>
 
-      <div *ngIf="correctAnswers.length > 0">
-        <div class="answer-status correct">
-          <ion-icon name="checkmark-circle"></ion-icon> Correct Answers
-        </div>
-        <ion-list>
-          <ion-item *ngFor="let answer of correctAnswers">
+    <!-- Correct Answers Section -->
+    <div *ngIf="showCorrectAnswers">
+      <div class="answer-status correct">
+        <ion-icon name="checkmark-circle"></ion-icon> Correct Answers
+      </div>
+      <ion-list>
+        <ion-item *ngFor="let answer of correctAnswers">
+          <div>
+            <img *ngIf="answer.image" [src]="answer.image" alt="Question Image" />
             {{ answer.text }}
-          </ion-item>
-        </ion-list>
-      </div>
+          </div>
+        </ion-item>
+      </ion-list>
+    </div>
 
-      <div *ngIf="incorrectAnswers.length > 0">
-        <div class="answer-status incorrect">
-          <ion-icon name="close-circle"></ion-icon> Incorrect Answers
-        </div>
-        <ion-list>
-          <ion-item *ngFor="let answer of incorrectAnswers">
+    <!-- Incorrect Answers Section -->
+    <div *ngIf="showIncorrectAnswers">
+      <div class="answer-status incorrect">
+        <ion-icon name="close-circle"></ion-icon> Incorrect Answers
+      </div>
+      <ion-list>
+        <ion-item *ngFor="let answer of incorrectAnswers">
+          <div>
+            <img *ngIf="answer.image" [src]="answer.image" alt="Question Image" />
             {{ answer.text }} (Your answer: {{ answer.selectedAnswer }})
-          </ion-item>
-        </ion-list>
-      </div>
+          </div>
+        </ion-item>
+      </ion-list>
+    </div>
 
-      <div *ngIf="unansweredQuestions.length > 0">
-        <div class="answer-status unanswered">
-          <ion-icon name="help-circle"></ion-icon> Unanswered Questions
-        </div>
-        <ion-list>
-          <ion-item *ngFor="let question of unansweredQuestions">
+    <!-- Unanswered Questions Section -->
+    <div *ngIf="showUnansweredQuestions">
+      <div class="answer-status unanswered">
+        <ion-icon name="help-circle"></ion-icon> Unanswered Questions
+      </div>
+      <ion-list>
+        <ion-item *ngFor="let question of unansweredQuestions">
+          <div>
+            <img *ngIf="question.image" [src]="question.image" alt="Question Image" />
             {{ question.text }}
-          </ion-item>
-        </ion-list>
-      </div>
-    </ion-card-content>
-  </ion-card>
-</div>
+          </div>
+        </ion-item>
+      </ion-list>
+    </div>
+  </div>
 
-<ion-button expand="full" (click)="generatePDF()">Download PDF</ion-button>
+  <!-- Buttons for Navigation -->
+  <ion-button expand="full" (click)="showTimeAndScoreSection()">Show Time and Score</ion-button>
+  <ion-button expand="full" (click)="showCorrectAnswersSection()">Show Correct Answers</ion-button>
+  <ion-button expand="full" (click)="showIncorrectAnswersSection()">Show Incorrect Answers</ion-button>
+  <ion-button expand="full" (click)="showUnansweredQuestionsSection()">Show Unanswered Questions</ion-button>
+  <ion-button expand="full" (click)="generatePDF()">Download PDF</ion-button>
 </ion-content>
