removed menu bar and made test 3 theme black and white

--- a/src/app/test3/test3.page.html
+++ b/src/app/test3/test3.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="dark">
     <ion-title>
       Learner's License Test 3
     </ion-title>
@@ -10,7 +10,7 @@
 <ion-content>
   <div id="main-container">
   <div class="question-card" *ngIf="questions.length > 0">
-    <ion-card>
+    <ion-card color="dark">
       <ion-card-header>
         <ion-card-title>{{ questions[currentQuestionIndex].text }}</ion-card-title>
       </ion-card-header>
