--- a/src/app/test3/test3.page.scss
+++ b/src/app/test3/test3.page.scss
@@ -90,5 +90,10 @@ ion-content {
     text-wrap:wrap ;
     /* Optional: add ellipsis (...) for text overflow */
   }
+  ion-color{
+   
+  }
   
-  
+  ion-toolbar{
+   
+  }
