--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,7 +11,7 @@
 
   <ul>
     <li>Ensure you have studied the material thoroughly.</li>
-    <li>You have a total of 10 minutes (600 seconds) to complete the test.</li>
+    <li>You have a total of 60 minutes  to complete the test.</li>
     <li>Answer all the questions to the best of your knowledge.</li>
     <li>You can navigate between questions using the "Previous" and "Next" buttons.</li>
     <li>Once submitted, the test cannot be retaken.</li>
