--- a/src/app/test2/test2.page.html
+++ b/src/app/test2/test2.page.html
@@ -10,7 +10,7 @@
 <ion-content>
   <div id="main-container">
   <div class="question-card" *ngIf="questions.length > 0">
-    <ion-card>
+    <ion-card color="primary">
       <ion-card-header>
         <ion-card-title>{{ questions[currentQuestionIndex].text }}</ion-card-title>
       </ion-card-header>
