--- a/src/app/wellcome/wellcome.page.scss
+++ b/src/app/wellcome/wellcome.page.scss
@@ -1,44 +1,69 @@
+/* styles.css */
+
 ion-content {
-    --background: #f4f4f4;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  --background: #f4f4f4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+ion-title {
+  font-size: 24px;
+  color: #333;
+}
+
+h2 {
+  font-size: 2rem;
+  color: #007BFF;
+  margin-top: 1rem;
+}
+
+p {
+  font-size: 1.2rem;
+  color: #777;
+  margin: 1rem 0;
+}
+
+ion-button {
+  background-color: #007BFF;
+  color: #fff;
+  font-weight: bold;
+
+}
+img {
+  max-width: 80%;
+  animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
   }
-  
-  ion-title {
-    font-size: 24px;
-    color: #333;
+  to {
+    opacity: 1;
   }
-  
-  h2 {
-    font-size: 22px;
-    color: #7a1d1d;
+}
+div {
+  animation: moveLeftToRight 20s cubic-bezier(0.4, 0, 0.4, 1) infinite; /* Adjust the duration and cubic-bezier values */ /* Adjust the duration as needed */
+
+  white-space: nowrap;
+  font-size: 1.2em;
+  background-color: #007BFF;
+  color: white;
+
+}
+
+@keyframes moveLeftToRight {
+  0% {
+    transform: translateX(100%);
   }
-  
-  p {
-    font-size: 18px;
-    color: #777;
+  100% {
+    transform: translateX(-100%);
+
   }
-  
-  ion-button {
-    background-color: #007BFF;
-    color: #fff;
-    font-weight: bold;
-  }
-  
-  img {
-    max-width: 80%;
-    animation: fadeIn 1s;
-  }
-  
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 3;
-    }
-  }
-  
+}
+.car{
+  background-color: white;
+}
